<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="vopros">Рейтинг этого фильма больше, чем 9?:</string>
    <string name="search">Поиск</string>
    <string name="mediateka">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="back">Назад</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="dark_theme">Темная тема</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="share_text" translatable="false">https://practicum.yandex.ru/android-developer/</string>
    <string name="email" translatable="false">ilja.iwantsov1998@yandex.ru</string>
    <string name="subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="userAgreementUrl" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="update">Обновить</string>
    <string name="ConnectProblemNothingFound">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="NothingFound">Ничего не найдено</string>
    <string name="Duration">Длительность</string>
    <string name="Album">Альбом</string>
    <string name="ReleaseYear">Год</string>
    <string name="SongGanre">Жанр</string>
    <string name="SongCountry">Страна</string>
    <string name="ZeroTiming" translatable="false">00:00</string>
</resources>