<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/settings_backgroud"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="24dp"
        app:contentInsetStartWithNavigation="64dp"
        app:navigationIcon="@drawable/arrow_back">

        <TextView
            style="@style/AppBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/themeSwitcher"
            style="SettingsSwitch"
            android:layout_width="match_parent"
            android:layout_height="@dimen/SettingsLayoutHeight"
            android:fontFamily="@font/ys_display_regular"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/dark_theme"
            android:textColor="@color/settings_text"
            android:textSize="@dimen/SettingsTextSize"
            app:thumbTint="@color/thumb_tint"
            app:trackTint="@color/thumb_track_tint"
            tools:ignore="UseSwitchCompatOrMaterialXml" />


        <Button
            android:id="@+id/button_share"
            style="@style/ButtonSettingsStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/SettingsLayoutHeight"
            android:drawableEnd="@drawable/share"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:text="@string/share_app" />

        <Button
            android:id="@+id/button_support"
            style="@style/ButtonSettingsStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/SettingsLayoutHeight"
            android:drawableEnd="@drawable/support"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:text="@string/support" />

        <Button
            android:id="@+id/button_userAgreement"
            style="@style/ButtonSettingsStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/SettingsLayoutHeight"
            android:drawableEnd="@drawable/user_agreement"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:text="@string/user_agreement" />

    </LinearLayout>

</LinearLayout>