<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main_backgroud"
    android:paddingHorizontal="16dp">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="center"
            android:layout_marginTop="4dp"
            android:layout_marginStart="4dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="22sp" />

    </FrameLayout>




<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="33dp"
    android:orientation="vertical">


    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:backgroundTint="@color/white"
        android:text="@string/search"
        android:textSize="22sp"
        android:textColor="@color/text"
        android:layout_marginBottom="16dp"
        app:cornerRadius="16dp"
        app:icon="@drawable/search"
        app:iconGravity="textStart"
        app:iconTint="@color/black"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:backgroundTint="@color/white"
        android:text="@string/mediateka"
        android:textSize="22sp"
        android:textColor="@color/text"
        android:layout_marginBottom="16dp"
        app:cornerRadius="16dp"
        app:icon="@drawable/mediateka"
        app:iconGravity="textStart"
        app:iconTint="@color/black"/>



    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="28dp"
        android:layout_weight="3"
        android:backgroundTint="@color/white"
        android:text="@string/settings"
        android:textSize="22sp"
        android:textColor="@color/text"
        app:cornerRadius="16dp"
        app:icon="@drawable/settings"
        app:iconGravity="textStart"
        app:iconTint="@color/black"/>

</LinearLayout>

</LinearLayout>