<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/audioplayer_background">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="4dp"
        app:contentInsetStartWithNavigation="64dp"
        app:navigationIcon="@drawable/arrow_back"
        app:titleTextAppearance="@style/AppBar"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftMainGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightMainGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp"/>

    <ImageView
        android:id="@+id/trackAlbumArt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="@id/leftMainGuideline"
        app:layout_constraintEnd_toEndOf="@id/rightMainGuideline"
        android:src="@drawable/baseline_gesture_24"
        app:layout_constraintDimensionRatio="h, 1:1"
        />

    <TextView
        android:id="@+id/songName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/leftMainGuideline"
        app:layout_constraintEnd_toEndOf="@id/rightMainGuideline"
        app:layout_constraintTop_toBottomOf="@id/trackAlbumArt"
        android:layout_marginTop="24dp"
        tools:text="Song name"
        android:textSize="22sp"
        android:fontFamily="@font/ys_display_medium"
        android:textFontWeight="400"
        android:textColor="@color/audioplayer_text_color"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constrainedWidth="true"

        />

    <TextView
        android:id="@+id/artistName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/leftMainGuideline"
        app:layout_constraintEnd_toEndOf="@id/rightMainGuideline"
        app:layout_constraintTop_toBottomOf="@id/songName"
        android:layout_marginTop="12dp"
        tools:text="Artist"
        android:textSize="14sp"
        android:textColor="@color/audioplayer_text_color"
        android:fontFamily="@font/ys_display_medium"
        android:textFontWeight="400"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constrainedWidth="true"

        />

    <ImageView
        android:id="@+id/addInFavorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/addinfavorites"
        app:layout_constraintStart_toStartOf="@id/leftMainGuideline"
        app:layout_constraintBottom_toBottomOf="@id/playSongButton"
        app:layout_constraintTop_toTopOf="@id/playSongButton"
        />

    <ImageView
        android:id="@+id/playSongButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/playbutton"
        app:layout_constraintStart_toEndOf="@id/addInFavorites"
        app:layout_constraintTop_toBottomOf="@id/artistName"
        app:layout_constraintEnd_toStartOf="@id/likeButton"
        android:padding="8dp"
        />

    <TextView
        android:id="@+id/currentSongTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="02:33"
        app:layout_constraintTop_toBottomOf="@id/playSongButton"
        app:layout_constraintStart_toStartOf="@id/playSongButton"
        app:layout_constraintEnd_toEndOf="@id/playSongButton"
        android:layout_marginTop="4dp"
        android:textSize="14sp"
        android:textColor="@color/audioplayer_text_color"
        android:textFontWeight="500"
        android:fontFamily="@font/ys_display_medium"
        />

    <ImageView
        android:id="@+id/likeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/likebutton"
        app:layout_constraintEnd_toEndOf="@id/rightMainGuideline"
        app:layout_constraintTop_toTopOf="@id/playSongButton"
        app:layout_constraintBottom_toBottomOf="@id/playSongButton"
        />

    <TextView
        android:id="@+id/durationSong"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/SongInfoTitleAudioPlayer"
        android:text="@string/Duration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currentSongTime"
        android:layout_marginTop="30dp"
        android:layout_marginStart="16dp"

        />
    <TextView
        android:id="@+id/durationSongValue"
        style="@style/SongInfoValueAutioPlayer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        tools:text="02:33"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currentSongTime"
        android:layout_marginEnd="16dp"
        app:layout_constraintHorizontal_bias="1"

        />

    <TextView
        android:id="@+id/albumSong"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/SongInfoTitleAudioPlayer"
        android:text="@string/Album"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/durationSong"
        android:layout_marginStart="16dp"

        />

    <TextView
        android:id="@+id/albumSongValue"
        style="@style/SongInfoValueAutioPlayer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="AlbumSongName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/durationSongValue"
        android:layout_marginEnd="16dp"
        app:layout_constraintHorizontal_bias="1"

        />

    <TextView
        android:id="@+id/songYear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/SongInfoTitleAudioPlayer"
        android:text="@string/ReleaseYear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/albumSong"
        android:layout_marginStart="16dp"

        />

    <TextView
        android:id="@+id/songYearValue"
        style="@style/SongInfoValueAutioPlayer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="1965"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/albumSongValue"
        android:layout_marginEnd="16dp"
        app:layout_constraintHorizontal_bias="1"

        />

    <TextView
        android:id="@+id/songGanre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/SongInfoTitleAudioPlayer"
        android:text="@string/SongGanre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/songYear"
        android:layout_marginStart="16dp"

        />

    <TextView
        android:id="@+id/songGanreValue"
        style="@style/SongInfoValueAutioPlayer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="Rock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/songYearValue"
        android:layout_marginEnd="16dp"
        app:layout_constraintHorizontal_bias="1"

        />

    <TextView
        android:id="@+id/songCountry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/SongInfoTitleAudioPlayer"
        android:text="@string/SongCountry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/songGanre"
        android:layout_marginStart="16dp"

        />

    <TextView
        android:id="@+id/songCountryValue"
        style="@style/SongInfoValueAutioPlayer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="Великобритания"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/songGanreValue"
        android:layout_marginEnd="16dp"
        app:layout_constraintHorizontal_bias="1"

        />



</androidx.constraintlayout.widget.ConstraintLayout>